{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 1190,
  "lineage": "5b93694b-26dc-7d89-d6b2-553c2cb6774c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "arm_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03ab968b779a6aa1d",
            "domain": "vpc",
            "id": "eipalloc-03ab968b779a6aa1d",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-232-165-78.compute-1.amazonaws.com",
            "public_ip": "3.232.165.78",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Project": "ARMProjekt"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "arm_server_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a7d80731ae1b2435",
            "arn": "arn:aws:ec2:us-east-1:902308669087:instance/i-054fa7b1313cc2563",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LabInstanceProfile",
            "id": "i-054fa7b1313cc2563",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0de120eed92b77408",
            "private_dns": "ip-10-19-1-229.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.19.1.229",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:902308669087:key/8dd7b5ce-a0e0-443b-9776-3f9218210e0a",
                "throughput": 0,
                "volume_id": "vol-04f8e92c53cd60d8f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a5ad2ae5810229f3",
            "tags": {
              "Name": "PrivateServer"
            },
            "tags_all": {
              "Name": "PrivateServer",
              "Project": "ARMProjekt"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-029f80b98216396e1"
            ]
          },
          "dependencies": [
            "aws_ecs_cluster.arm_ecs_cluster",
            "aws_kms_key.ebs_encryption_key",
            "aws_security_group.arm_security_group",
            "aws_subnet.arm_subnet_private",
            "aws_vpc.arm_vpc",
            "data.aws_ami.ecs_optimized_amazon_linux_ami",
            "data.aws_caller_identity.current",
            "data.aws_iam_instance_profile.lab_instance_profile",
            "data.aws_iam_policy_document.ebs_encryption_kms_key_policy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "arm_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:902308669087:internet-gateway/igw-09a279ded57c6bd95",
            "id": "igw-09a279ded57c6bd95",
            "owner_id": "902308669087",
            "tags_all": {
              "Project": "ARMProjekt"
            },
            "vpc_id": "vpc-0d8c6c83948652f6d"
          },
          "dependencies": [
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "arm_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03ab968b779a6aa1d",
            "association_id": "eipassoc-0fcf62627a2a42404",
            "connectivity_type": "public",
            "id": "nat-0e6239aa32c3331d1",
            "network_interface_id": "eni-0e532b8792aaa104b",
            "private_ip": "10.19.2.145",
            "public_ip": "3.232.165.78",
            "subnet_id": "subnet-0db06699b2410d6f9",
            "tags_all": {
              "Project": "ARMProjekt"
            }
          },
          "dependencies": [
            "aws_eip.arm_eip",
            "aws_internet_gateway.arm_igw",
            "aws_subnet.arm_subnet_public",
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "arm_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:902308669087:route-table/rtb-01e9c96e0146d58fa",
            "id": "rtb-01e9c96e0146d58fa",
            "owner_id": "902308669087",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e6239aa32c3331d1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "Project": "ARMProjekt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8c6c83948652f6d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.arm_eip",
            "aws_internet_gateway.arm_igw",
            "aws_nat_gateway.arm_nat_gateway",
            "aws_subnet.arm_subnet_public",
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "arm_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:902308669087:route-table/rtb-0152631297fde4e72",
            "id": "rtb-0152631297fde4e72",
            "owner_id": "902308669087",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09a279ded57c6bd95",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "Project": "ARMProjekt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8c6c83948652f6d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.arm_igw",
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "arm_rt_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064b2316d32898c94",
            "route_table_id": "rtb-01e9c96e0146d58fa",
            "subnet_id": "subnet-0a5ad2ae5810229f3"
          },
          "dependencies": [
            "aws_eip.arm_eip",
            "aws_internet_gateway.arm_igw",
            "aws_nat_gateway.arm_nat_gateway",
            "aws_route_table.arm_private_rt",
            "aws_subnet.arm_subnet_private",
            "aws_subnet.arm_subnet_public",
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "arm_rt_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a7a16b8d63c0e253",
            "route_table_id": "rtb-0152631297fde4e72",
            "subnet_id": "subnet-0db06699b2410d6f9"
          },
          "dependencies": [
            "aws_internet_gateway.arm_igw",
            "aws_route_table.arm_public_rt",
            "aws_subnet.arm_subnet_public",
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "arm_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:902308669087:security-group/sg-029f80b98216396e1",
            "description": "Security group for ARM EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-029f80b98216396e1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP ingress",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS ingress",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH ingress",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow traffic in security group",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "arm_security_group",
            "name_prefix": "",
            "owner_id": "902308669087",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Project": "ARMProjekt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8c6c83948652f6d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.arm_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "arm_subnet_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:902308669087:subnet/subnet-0a5ad2ae5810229f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.19.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5ad2ae5810229f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "902308669087",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private"
            },
            "tags_all": {
              "Name": "Private",
              "Project": "ARMProjekt"
            },
            "vpc_id": "vpc-0d8c6c83948652f6d"
          },
          "dependencies": [
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "arm_subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:902308669087:subnet/subnet-0db06699b2410d6f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.19.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db06699b2410d6f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "902308669087",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public"
            },
            "tags_all": {
              "Name": "Public",
              "Project": "ARMProjekt"
            },
            "vpc_id": "vpc-0d8c6c83948652f6d"
          },
          "dependencies": [
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "arm_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:902308669087:vpc/vpc-0d8c6c83948652f6d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.19.0.0/16",
            "default_network_acl_id": "acl-03d58105120dece6c",
            "default_route_table_id": "rtb-0b02b29139a91c756",
            "default_security_group_id": "sg-0c05ab3a68a493a40",
            "dhcp_options_id": "dopt-01afa91bb7abea722",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d8c6c83948652f6d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b02b29139a91c756",
            "owner_id": "902308669087",
            "tags_all": {
              "Project": "ARMProjekt"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}